--- a/reactos/dll/directx/wine/ddraw/CMakeLists.txt
+++ b/reactos/dll/directx/wine/ddraw/CMakeLists.txt
@@ -34,7 +34,7 @@ add_library(ddraw SHARED
     ddraw.rc
     ${CMAKE_CURRENT_BINARY_DIR}/ddraw.def)
 
-set_module_type(ddraw win32dll)
+set_module_type(ddraw win32dll HOTPATCHABLE)
 target_link_libraries(ddraw wine uuid dxguid ${PSEH_LIB})
 add_importlibs(ddraw advapi32 gdi32 user32 wined3d msvcrt kernel32 ntdll)
 add_dependencies(ddraw wineheaders)
