--- a/reactos/dll/win32/crypt32/lang/crypt32_Tr.rc
+++ b/reactos/dll/win32/crypt32/lang/crypt32_Tr.rc
@@ -33,7 +33,7 @@ STRINGTABLE
     IDS_KEY_USAGE "Anahtar Kullanımı"
     IDS_CERT_POLICIES "Onay Belgesi İlkeleri"
     IDS_SUBJECT_KEY_IDENTIFIER "Konu Anahtarı Tanımlayıcısı"
-    IDS_CRL_REASON_CODE "CRL Neden Düzgüsü"
+    IDS_CRL_REASON_CODE "CRL Neden Kodu"
     IDS_CRL_DIST_POINTS "CRL Dağıtım Noktaları"
     IDS_ENHANCED_KEY_USAGE "Gelişmiş Anahtar Kullanımı"
     IDS_AUTHORITY_INFO_ACCESS "Yetkili Bilgi Erişimi"
@@ -82,7 +82,7 @@ STRINGTABLE
     IDS_CROSS_CA_VERSION "Çapraz CA Sürümü"
     IDS_SERIALIZED_SIG_SERIAL_NUMBER "Dizilendirilmiş İmzâ Dizi Numarası"
     IDS_PRINCIPAL_NAME "Asıl Adı"
-    IDS_WINDOWS_PRODUCT_UPDATE "Pencereler Ürünü Şimdikileştirmesi"
+    IDS_WINDOWS_PRODUCT_UPDATE "Windows Ürünü Şimdikileştirmesi"
     IDS_ENROLLMENT_NAME_VALUE_PAIR "Kaydedilmiş Ad Değeri Çifti"
     IDS_OS_VERSION "İşletim Dizgesi Sürümü"
     IDS_ENROLLMENT_CSP "Kayıt CSP'si"
@@ -109,7 +109,7 @@ STRINGTABLE
     IDS_PKCS_7_SIGNED_ENVELOPED "PKCS 7 İmzâlı Zarflı"
     IDS_PKCS_7_DIGESTED "PKCS 7 Özetlenmiş"
     IDS_PKCS_7_ENCRYPTED "PKCS 7 Şifreli"
-    IDS_PREVIOUS_CA_CERT_HASH "Bir Önceki CA Onay Belgesi Düzgüsü"
+    IDS_PREVIOUS_CA_CERT_HASH "Bir Önceki CA Onay Belgesi Kodu"
     IDS_CRL_VIRTUAL_BASE "Farazî Taban CRL Numarası"
     IDS_CRL_NEXT_PUBLISH "Bir Sonraki CRL Yayımlaması"
     IDS_CA_EXCHANGE "CA Şifreleme Onay Belgesi"
@@ -129,24 +129,24 @@ STRINGTABLE
     IDS_REVOKE_REQUEST "İsteği İptal Et"
     IDS_QUERY_PENDING "Sorgu Beklemede"
     IDS_SORTED_CTL "Onay Belgesi Güven Dizelgesi"
-    IDS_ARCHIVED_KEY_CERT_HASH "Belgeliklenmiş Anahtar Onaylama Düzgüsü"
+    IDS_ARCHIVED_KEY_CERT_HASH "Belgeliklenmiş Anahtar Onaylama Kodu"
     IDS_PRIVATE_KEY_USAGE_PERIOD "Husûsî Anahtar Kullanım Dönemi"
     IDS_CLIENT_INFORMATION "İstemci Bilgisi"
     IDS_SERVER_AUTHENTICATION "Sunucu Yetkilendirmesi"
     IDS_CLIENT_AUTHENTICATION "İstemci Yetkilendirmesi"
-    IDS_CODE_SIGNING "Düzgü İmzâlama"
+    IDS_CODE_SIGNING "Kod İmzâlama"
     IDS_SECURE_EMAIL "Güvenli E-Posta"
     IDS_TIME_STAMPING "Zaman Damgalama"
-    IDS_MICROSOFT_TRUST_LIST_SIGNING "Mikroyazılım Güven Dizelgesi İmzâlaması"
-    IDS_MICROSOFT_TIME_STAMPING "Mikroyazılım Zaman Damgalaması"
+    IDS_MICROSOFT_TRUST_LIST_SIGNING "Microsoft Güven Dizelgesi İmzâlaması"
+    IDS_MICROSOFT_TIME_STAMPING "Microsoft Zaman Damgalaması"
     IDS_IPSEC_END_SYSTEM "IP Güvenlik Uç Dizgesi"
     IDS_IPSEC_TUNNEL "IP Güvenlik Tünel Sonu"
     IDS_IPSEC_USER "IP Güvenlik Kullanıcısı"
     IDS_EFS "Şifreleyici Kütük Dizgesi"
-    IDS_WHQL_CRYPTO "Pencereler Donanım Sürücüsü Doğrulaması"
-    IDS_NT5_CRYPTO "Pencereler Dizge Bileşeni Doğrulaması"
-    IDS_OEM_WHQL_CRYPTO "OEM Pencereler Dizge Bileşeni Doğrulaması"
-    IDS_EMBEDDED_NT_CRYPTO "Gömülü Pencereler Dizge Bileşeni Doğrulaması"
+    IDS_WHQL_CRYPTO "Windows Donanım Sürücüsü Doğrulaması"
+    IDS_NT5_CRYPTO "Windows Dizge Bileşeni Doğrulaması"
+    IDS_OEM_WHQL_CRYPTO "OEM Windows Dizge Bileşeni Doğrulaması"
+    IDS_EMBEDDED_NT_CRYPTO "Gömülü Windows Dizge Bileşeni Doğrulaması"
     IDS_KEY_PACK_LICENSES "Anahtar Paketi Rusatları"
     IDS_LICENSE_SERVER "Ruhsat Sunucusu Doğrulaması"
     IDS_SMART_CARD_LOGON "Akıllı Kart ile Oturum Açma"
