--- a/reactos/dll/win32/devmgr/devmgr.rc
+++ b/reactos/dll/win32/devmgr/devmgr.rc
@@ -71,6 +71,9 @@ IDI_DEVMGR ICON "resources/devmgr.ico"
 #ifdef LANGUAGE_SQ_AL
     #include "lang/sq-AL.rc"
 #endif
+#ifdef LANGUAGE_TR_TR
+    #include "lang/tr-TR.rc"
+#endif
 #ifdef LANGUAGE_UK_UA
     #include "lang/uk-UA.rc"
 #endif
